--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ポートフォリオ - けんぴょう</title>
+  <title>ポートフォリオ - 佐藤建尚</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -61,7 +61,7 @@
   </main>
 
   <footer>
-    &copy; 2025 けんぴょう. All rights reserved.
+    &copy; 2025 佐藤建尚. All rights reserved.
   </footer>
 </body>
 </html>
