--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="profile" class="fade-in delay-1">
       <h2 class="section-title">Profile</h2>
       <p>麻生情報ビジネス専門学校 情報工学科 AI&IoT専攻の<strong>佐藤建尚</strong>です。<br>
-        AIやIoTを中心に、Web開発や機械学習など幅広く学習しています。<br>
+        AIやIoTを中心に、Web開発や機械学習などを学習しています。<br>
         現在はPython、JavaScriptなどを勉強中で、将来はAIやWeb技術を活かしたサービス開発に携わりたいと考えています。</p>
 
     </section>
