--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2 class="section-title">Profile</h2>
       <p>麻生情報ビジネス専門学校 情報工学科 AI&IoT専攻の<strong>佐藤建尚</strong>です。<br>
         AIやIoTを中心に、Web開発や機械学習などを学習しています。<br>
-        現在はPython、JavaScriptなどを勉強中で、将来はAIやWeb技術を活かしたサービス開発に携わりたいと考えています。</p>
+        現在はPython、JavaScriptなどを勉強中で、AIやWeb技術を活かしたサービス開発に携わりたいと考えています。</p>
 
     </section>
 
